--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "Configure, save, and run sequences of keyboard shortcuts",
   "icon": "command-icon.png",
   "author": "HelloImSteven",
+  "contributors": [
+    "devlos"
+  ],
   "categories": [
     "Productivity",
     "Developer Tools",
@@ -22,15 +25,7 @@
       "name": "run-shortcut-sequence",
       "title": "Run Shortcut Sequence",
       "description": "Run a shortcut sequence from your list of configured sequences",
-      "mode": "view",
-      "arguments": [
-        {
-          "name": "sequenceName",
-          "placeholder": "Sequence Name",
-          "required": false,
-          "type": "text"
-        }
-      ]
+      "mode": "view"
     }
   ],
   "dependencies": {
